[project]
name = "phone-address"
version = "0.1.0"
description = "Simple microservice for phone and address tracking."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.123.10",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.13"

[tool.pytest.ini_options]
pythonpath = "src"
